--- a/openwater_nep_method.qmd
+++ b/openwater_nep_method.qmd
@@ -231,6 +231,122 @@ p1 + p2 + p3 + p4 + p5 + plot_layout(ncol = 1)
 
 ```
 
+
+```{r}
+#| fig-height: 16
+#| fig-width: 8
+#| eval: false
+#| echo: false
+# font_add_google("Noto Sans JP","notosans-jp")
+
+theme_pubr(base_size = 10, 
+           base_family = "notosans-jp") |> 
+  theme_replace(panel.background = element_rect(fill = "white", 
+                                                color = "black",
+                                                linewidth = 1)) |> 
+  theme_set() 
+showtext_auto()
+
+dataset2 = dataset |> 
+  group_nest(date) |> 
+  filter(
+    between(date, as_date("2022-06-02"), as_date("2022-06-03"))) |> 
+  unnest(data) |> 
+  mutate(H = 24*(day(datetime) - 2) + hour(datetime) + minute(datetime) / 60, .before = datetime) |> 
+  print(n = Inf)
+
+yl1 = "溶存酸素濃度 (mg L<sup>-1</sup>)"
+yl1b = "CO<sub>2</sub> 分圧 (&mu;atm)"
+yl2 = "水温 (&deg; C)"
+yl3 = "風速 (m s<sup>-1</sup>)"
+yl4 = "気圧 (hPa)"
+yl5 = "水深 (m"
+xl = "時"
+
+p1 = ggplot(dataset2) + 
+  geom_line(aes(x = H, 
+                y = mgl)) +
+  scale_y_continuous(yl1)+
+  scale_x_continuous(xl, breaks = seq(0, 48, by = 6), limits = c(0, 48))+
+  theme(axis.title.y = element_markdown(),
+        axis.title.x = element_markdown())
+
+scale_range <- function(data) {
+  # Calculate the scaling factor
+  scale_factor <- (300 - 200) / (300 - 0)  # New range / Old range
+  
+  # Apply the scaling factor to the data
+  data * scale_factor/2 + 200  # New minimum (200) is added as an offset
+}
+
+m1 = gam(mgl ~ s(H, k = 50), data = dataset2)
+dataset2 = dataset2 |> 
+  mutate(fit = predict(m1))
+
+p1b = 
+  dataset2 |> 
+  mutate(co2 = 300 * (12 - fit)) |> 
+  ggplot() + 
+  annotate("richtext",
+           x = 0, y = 200,
+           vjust = 0, hjust = 0,
+           family = "notosans-jp",
+           text.color = "black",
+           fontface = "bold",
+           color = "transparent",
+           fill = "transparent",
+           label = "期待する CO<sub>2</sub> 分圧の変動")+
+  geom_line(aes(x = H, 
+                y = scale_range(co2))) +
+  scale_y_continuous(yl1b)+
+  scale_x_continuous(xl, breaks = seq(0, 48, by = 6), limits = c(0, 48))+
+  theme(axis.title.y = element_markdown(),
+        axis.title.x = element_markdown())
+
+
+p2 = ggplot(dataset2) + 
+  geom_line(aes(x = H, 
+                y = temperature)) +
+  scale_y_continuous(yl2) +
+  scale_x_continuous(xl, breaks = seq(0, 48, by = 6), limits = c(0, 48))+
+  theme(axis.title.y = element_markdown(),
+        axis.title.x = element_markdown())
+
+p3 = ggplot(dataset2) + 
+  geom_line(aes(x = H, 
+                y = wind)) +
+  scale_y_continuous(yl3)+
+  scale_x_continuous(xl, breaks = seq(0, 48, by = 6), limits = c(0, 48))+
+  theme(axis.title.y = element_markdown(),
+        axis.title.x = element_markdown())
+
+p4 = ggplot(dataset2) + 
+  geom_line(aes(x = H, 
+                y = hpa)) +
+  scale_y_continuous(yl4)+
+  scale_x_continuous(xl, breaks = seq(0, 48, by = 6), limits = c(0, 48))+
+  theme(axis.title.y = element_markdown(),
+        axis.title.x = element_markdown())
+  
+p5 = ggplot(dataset2) + 
+  geom_line(aes(x = H, 
+                y = depth)) +
+  scale_y_continuous(yl5)+
+  scale_x_continuous(xl, breaks = seq(0, 48, by = 6), limits = c(0, 48))+
+  theme(axis.title.y = element_markdown(),
+        axis.title.x = element_markdown())
+
+p1 + p1b +p2 + p3 + p4 + p5 +
+  plot_layout(ncol = 2)
+
+pdfname = "example.pdf"
+save_plot(pdfname, 
+          width = 160,
+          height = 160,
+           units = "mm")
+
+```
+
 # 酸素変動速度の求め方
 
 ```{r}
